<resources>
    <!-- Common Strings -->
    <string name="app_name">PhysiDex</string>
    <string name="button_notice">Notice</string>
    <string name="search_pokemon_text">Search for a Pokemon</string>
    <string name="enter_pokemon">Enter a Pokemon</string>
    <string name="search_button">Catch \'Em</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>

    <!-- Screen Titles -->
    <string name="home_page">Home Page</string>
    <string name="deck_manager">Deck Manager</string>
    <string name="game_manager">Game Manager</string>
    <string name="my_binder">My Binder</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>

    <!-- Display card -->
    <string name="no_cards_found">No cards were found.</string>
    <string name="image_description">A card resulting from search.</string>
    <string name="search_input">You searched: %1$s</string>
    <string name="results_number">%1$d results found</string>
    <string name="card_description">PokeCard found</string>
    <string name="add_to_binder">ADD TO MY BINDER</string>
    <string name="remove_from_binder">REMOVE A COPY FROM MY BINDER</string>
    <string name="remove_all_from_binder">REMOVE ALL COPIES FROM MY BINDER</string>

    <!-- Deck Manager Page -->
    <string name="deck_play">Play!</string>
    <string name="deck_cannot_play">Edit</string>
    <string name="deck_energy">Energy: </string>
    <string name="deck_trainer">Trainers: </string>
    <string name="deck_pokemon">Pokemon: </string>
    <string name="new_deck_title">New Deck:</string>
    <string name="new_deck_name">Deck Name</string>
    <string name="new_deck_num_cards_prompt">Number of cards in deck</string>
    <string name="new_deck_60">60 cards</string>
    <string name="new_deck_30">30 cards</string>
    <string name="new_deck_button">Create deck</string>
    <string name="new_deck_safety_prompt">This can be changed later</string>
    <string name="deck_cards_slash_total">%1$d/%2$d cards</string>
    <string name="deck_games_played">Games played: %1$d</string>
    <string name="deck_delete_confirmation">Are you sure you wish to delete %1$s? This cannot be undone!</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- My Binder -->
    <string name="binder_recent">Recently Added</string>
    <string name="binder_trainer">Trainer Cards</string>
    <string name="binder_all">All Cards</string>
    <string name="binder_owned">x%1$d</string>
    <string name="deck_owned">%1$d/%2$d</string>
    <string name="view_more">View More</string>
    <string name="deck_menu_add_cards">Add Cards</string>
    <string name="deck_menu_delete_deck">Delete Deck</string>
    <string name="add_to_deck_button">ADD TO DECK</string>
    <string name="remove_from_deck_button">REMOVE FROM DECK</string>
    <string name="home_total_cards">%1$d total cards</string>
    <string name="home_unique_cards">%1$d unique cards</string>
    <string name="home_decks">%1$d decks</string>


</resources>
