<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/pureWhite">

    <TextView
        android:id="@+id/new_deck_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/new_deck_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="@+id/new_deck_name"
        app:layout_constraintStart_toStartOf="@+id/new_deck_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_deck_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/new_deck_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/new_deck_card_amount_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_deck_title"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/new_deck_card_amount_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_deck_num_cards_prompt"
        app:layout_constraintBottom_toTopOf="@+id/new_deck_card_amount"
        app:layout_constraintEnd_toEndOf="@+id/new_deck_card_amount"
        app:layout_constraintStart_toStartOf="@+id/new_deck_card_amount" />

    <RadioGroup
        android:id="@+id/new_deck_card_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:checkedButton="@+id/radioButton_60"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/new_deck_name"
        app:layout_constraintStart_toStartOf="@+id/new_deck_name">

        <RadioButton
            android:id="@+id/radioButton_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_deck_30" />

        <RadioButton
            android:id="@+id/radioButton_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_deck_60" />
    </RadioGroup>

    <Button
        android:id="@+id/new_deck_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/new_deck_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_deck_safety_prompt"
        app:layout_constraintBottom_toTopOf="@+id/new_deck_create"
        app:layout_constraintEnd_toEndOf="@+id/new_deck_card_amount"
        app:layout_constraintStart_toStartOf="@+id/new_deck_card_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>