<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.physidex.physidex.pages.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment"/>
    <fragment
        android:id="@+id/gameManagerHomeFragment"
        android:name="com.physidex.physidex.pages.GameManagerHomeFragment"
        android:label="@string/game_manager"
        tools:layout="@layout/game_manager_main"/>
    <fragment
        android:id="@+id/searchHomeFragment"
        android:name="com.physidex.physidex.pages.SearchHomeFragment"
        android:label="@string/search"
        tools:layout="@layout/activity_main">
        <action
            android:id="@+id/actionSearch"
            app:destination="@id/searchResultsActivity"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/deckManagerFragment"
        android:name="com.physidex.physidex.pages.DeckManagerFragment"
        android:label="@string/deck_manager"
        tools:layout="@layout/deck_manager_main">
        <action
            android:id="@+id/actionOpenDeck"
            app:destination="@id/deckDetailActivity" />
    </fragment>
    <fragment
        android:id="@+id/searchResultsActivity"
        android:name="com.physidex.physidex.pages.SearchResultsActivity"
        android:label="@string/search_results"
        tools:layout="@layout/activity_display_card">
        <argument
            android:name="query"
            app:argType="string" />
        <action
            android:id="@+id/actionViewDetails"
            app:destination="@id/cardDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/myBinderHomeFragment"
        android:name="com.physidex.physidex.pages.MyBinderHomeFragment"
        android:label="@string/my_binder"
        tools:layout="@layout/my_binder_main" >
        <action
            android:id="@+id/actionOpenBinder"
            app:destination="@id/myBinderGridActivity"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">
            <argument
                android:name="listToDisplay"
                android:defaultValue="ALL" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.physidex.physidex.pages.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/settings_main"/>
    <fragment
        android:id="@+id/myBinderGridActivity"
        android:name="com.physidex.physidex.pages.MyBinderGridActivity"
        android:label="MyBinderGridActivity"
        tools:layout="@layout/my_binder_grid">
        <argument
            android:name="listToDisplay"
            app:argType="string" />
        <argument
            android:name="deckID"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <activity
        android:id="@+id/deckDetailActivity"
        android:name="com.physidex.physidex.pages.DeckDetailActivity"
        android:label="DeckDetailActivity"
        tools:layout="@layout/deck_manager_deck" >
        <argument
            android:name="deckID"
            app:argType="integer" />
    </activity>
    <fragment
        android:id="@+id/cardDetailFragment"
        android:name="com.physidex.physidex.pages.CardDetailFragment"
        android:label="CardDetailFragment" >
        <argument
            android:name="deckId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
</navigation>