<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/pokecard_container_retracted"
    tools:layout_height="@dimen/pokecard_container_expanded">

    <ImageView
        android:id="@+id/card_image_view"
        android:layout_width="171dp"
        android:layout_height="265dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:contentDescription="@string/card_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/pokecard_container_retracted" />

    <TextView
        android:id="@+id/card_owned"
        android:layout_width="38dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_circle"
        android:gravity="center"
        android:text="@string/binder_owned"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_subtract"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="x3" />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus_symbol"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/card_owned"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus_symbol"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_owned"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>