<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deck_edit_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_container_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="?attr/actionBarSize" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

    </androidx.recyclerview.widget.RecyclerView>

    <!-- Bottom bar  -->

    <TextView
        android:id="@+id/deck_trainer_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|top"
        android:text="@string/deck_trainer"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
        app:layout_constraintEnd_toStartOf="@+id/bottom_guideline_at_66"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bottom_guideline_at_33"
        app:layout_constraintTop_toBottomOf="@+id/bottom_container_guideline" />

    <TextView
        android:id="@+id/deck_trainer_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_guideline_at_66"
        app:layout_constraintStart_toStartOf="@+id/bottom_guideline_at_33"
        app:layout_constraintTop_toBottomOf="@+id/deck_trainer_label"
        tools:text="15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline_at_33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".33333333333333" />

    <TextView
        android:id="@+id/deck_pokemon_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|top"
        android:text="@string/deck_pokemon"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
        app:layout_constraintEnd_toStartOf="@+id/bottom_guideline_at_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_container_guideline" />

    <TextView
        android:id="@+id/deck_pokemon_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_guideline_at_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck_pokemon_label"
        tools:text="10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline_at_66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66666666" />

    <TextView
        android:id="@+id/deck_energy_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|top"
        android:text="@string/deck_energy"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottom_guideline_at_66"
        app:layout_constraintTop_toTopOf="@+id/bottom_container_guideline" />

    <TextView
        android:id="@+id/deck_energy_value"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottom_guideline_at_66"
        app:layout_constraintTop_toBottomOf="@+id/deck_energy_label"
        tools:text="9" />

</androidx.constraintlayout.widget.ConstraintLayout>